# LPlateDetector

./: CMakeLists.txt  Config.h.in  main.cpp
